# identity-service/src/main/resources/api.yml
@@ -49,6 +49,30 @@ paths:
             $ref: '#/definitions/User'
         401:
           description: Login failed
+
+  /registerCompany:
+    post:
+      description: Register company with admin user.
+      operationId: registerCompany
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: company
+          description: Company object that needs to be registered to Nimble.
+          required: true
+          schema:
+            $ref: "#/definitions/CompanyRegistration"
+      responses:
+        201:
+          description: Company registered
+          schema:
+            $ref: '#/definitions/CompanyRegistration'
+        405:
+          description: Company not registered
+
   /register:
     post:
       summary: Register a new user to the nimble.
@@ -60,7 +84,7 @@ paths:
         - application/json
       parameters:
         - in: body
-          name: body
+          name: user
           description: User object that needs to be registered to Nimble.
           required: true
           schema:
@@ -71,7 +95,7 @@ paths:
           schema:
             $ref: '#/definitions/User'
         405:
-          description: User not created
+          description: User not registered
 
 definitions:
   User:
@@ -100,6 +124,45 @@ definitions:
   UserToRegister:
     allOf:
       - $ref: '#/definitions/User' # UserToRegister has all properties of a User.
-      - properties: # extra properties only for registration
-          password:
-            type: string
+    properties: # extra properties only for registration
+        password:
+          type: string
+
+  Company:
+    title: Company on Nimble
+    type: object
+    properties:
+      address:
+        type: string
+
+  CompanyRegistration:
+    title: Company registration object
+    type: object
+    properties:
+      adminUsername:
+        type: string
+      adminPassword:
+        type: string
+      adminFirstname:
+        type: string
+      adminLastname:
+        type: string
+      adminJobTitle:
+        type: string
+      adminEmail:
+        type: string
+      adminDateOfBirth:
+        type: string
+        format: date
+      adminPlaceOBirth:
+        type: string
+      adminLegalDomain:
+        type: string
+      adminPhoneNumber:
+        type: string
+      companyName:
+        type: string
+      companyAddress:
+        type: string
+      companyCountry:
+        type: string
